tree-sitter-esl37/corpus/binary_expression1.txt
===================
Binary Expression 1
===================

__test expression:
    a and b 
end

__test expression:
    a or b 
end

__test expression:
    a or not b 
end

__test expression:
    not a or not b 
end

---

(source_file
    (test_expression
        (binary_expression
            (reference (identifier))
            (reference (identifier))
        )
    )
    (test_expression
        (binary_expression
            (reference (identifier))
            (reference (identifier))
        )
    )
    (test_expression
        (binary_expression
            (reference (identifier))
            (unary_expression
                (reference (identifier))
            )
        )
    )
    (test_expression
        (binary_expression
            (unary_expression
                (reference (identifier))
            )
            (unary_expression
                (reference (identifier))
            )
        )
    )
)
