tree-sitter-esl37/corpus/binary_expression2.txt
===================
Binary Expression 2
===================

__test expression:
    a + b 
end

__test expression:
    a * b 
end

__test expression:
    a * -b 
end

__test expression:
    -a * -b 
end

---

(source_file
    (test_expression
        (binary_expression
            (reference (identifier))
            (reference (identifier))
        )
    )
    (test_expression
        (binary_expression
            (reference (identifier))
            (reference (identifier))
        )
    )
    (test_expression
        (binary_expression
            (reference (identifier))
            (unary_expression
                (reference (identifier))
            )
        )
    )
    (test_expression
        (binary_expression
            (unary_expression
                (reference (identifier))
            )
            (unary_expression
                (reference (identifier))
            )
        )
    )
)
