tree-sitter-esl37/corpus/reference1.txt
===========
Reference 1
===========

__test expression:
    (a + b.value)
end

__test expression:
    a * (b.c1.dwell)
end

---

(source_file
    (test_expression
        (parenthesized_expression
            (binary_expression
                (reference (identifier))
                (reference (identifier) (identifier))
            )
        )
    )
    (test_expression
        (binary_expression
            (reference (identifier))
            (parenthesized_expression
                (reference (identifier) (identifier) (identifier))
            )
        )
    )
)
