tree-sitter-esl37/corpus/unary_expression1.txt
==================
Unary Expression 1
==================

__test expression:
    not a
end

__test expression:
    +1
end

__test expression:
    -1.0
end

__test expression:
    +1.0e-5
end

__test expression:
    not True
end

__test expression:
    not False
end

---

(source_file
    (test_expression
        (unary_expression
            (reference (identifier))
        )
    )
    (test_expression
        (unary_expression (integer))
    )
    (test_expression
        (unary_expression (float))
    )
    (test_expression
        (unary_expression (float))
    )
    (test_expression
        (unary_expression (boolean))
    )
    (test_expression
        (unary_expression (boolean))
    )
)
